[gd_scene load_steps=6 format=2]

[ext_resource path="res://Backgrounds/Lost.S02E01.1080p.BluRay.x265-RARBG.mp4_snapshot_37.31_[2023.04.03_21.55.48].jpg" type="Texture" id=1]
[ext_resource path="res://telas/tela_03.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 136, 105 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.25, 17.5 )

[sub_resource type="CapsuleShape2D" id=3]
height = 54.0

[node name="pc" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510, 297 )
scale = Vector2( 0.534375, 0.55 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 302, 135 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 141, 110 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 900, 278 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 48.75, 76.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 58, 76 )
shape = SubResource( 3 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_Area2D2_mouse_exited"]
